# osekkai-chan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  main.rs  renovate.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/actions/rust-info/: action.yml
.github/files/release-please/: release-please-config.json
.github/workflows/: build.yml  clippy-check.yml  release-please.yml  trigger-renovate.yml
src/: main.rs
