[package]
name = "osekkai-chan"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { optional = true, version = "=0.15.7" }
poise = "=0.6.1"
tokio = { version = "=1.37.0", features = ["rt-multi-thread"] }

[[bin]]
name = "osekkai-chan"
path = "main.rs"

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

[lints.clippy]
pedantic = "warn"
