[package]
name = "osekkai-chan"
version = "0.1.18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { optional = true, version = "=0.15.7" }
poise = "=0.6.1"
tokio = { version = "=1.42.0", features = ["rt-multi-thread"] }

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

[lints.clippy]
pedantic = "warn"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
